--- a/prod/argocd/prometheus.yml
+++ b/prod/argocd/prometheus.yml
@@ -16,3 +16,23 @@ spec:
     automated:
       selfHeal: true
       prune: true
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: prometheus-helm
+  namespace: argocd
+spec:
+  project: default
+  source:
+    chart: kube-prometheus-stack
+    repoURL: https://prometheus-community.github.io/helm-charts
+    targetRevision: 45.21.0
+    helm:
+      releaseName: kube-prometheus
+      valueFiles:
+      - values.yml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
+
