--- a/prod/prometheus/grafana-svc.yml
+++ b/prod/prometheus/grafana-svc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-grafana
+  name: grafana
   namespace: monitoring
 spec:
   type: LoadBalancer
