--- a/prod/prometheus/prometheus-svc.yml
+++ b/prod/prometheus/prometheus-svc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-kube-prometheus-prometheus
+  name: prometheus-prometheus
   namespace: monitoring
 spec:
   type: LoadBalancer
