--- a/prod/argocd/nextcloud.yml
+++ b/prod/argocd/nextcloud.yml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb-argo
+  name: nextcloud-argo
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: git@github.com:Kunde100/Kunde-k8s.git
     targetRevision: HEAD
-    path: prod/metal-lb
+    path: prod/nextcloud
   destination:
     server: https://kubernetes.default.svc
-    namespace: metallb-system
-  syncPolicy:
-    automated:
-      selfHeal: true
-      prune: true
+    namespace: nextcloud
+      #  syncPolicy:
+      #    automated:
+      #      selfHeal: true
+      #      prune: true
