--- a/prod/argocd/discord.yml
+++ b/prod/argocd/discord.yml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metallb-argo
+  name: discord-argo
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: git@github.com:Kunde100/Kunde-k8s.git
     targetRevision: HEAD
-    path: prod/metal-lb
+    path: prod/discord/
   destination:
     server: https://kubernetes.default.svc
-    namespace: metallb-system
+    namespace: discord
   syncPolicy:
     automated:
       selfHeal: true
