--- a/prod/discord/deployment.yml
+++ b/prod/discord/deployment.yml
@@ -19,6 +19,16 @@ spec:
         app: discord-bot
         delete-me: "true"
     spec:
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 1
+            preference:
+              matchExpressions:
+              - key: cpu
+                operator: In
+                values:
+                - "fast"
       containers:
       - name: discord-bot
         image: index.docker.io/brbik/music_bot:1-debian
@@ -37,6 +47,7 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 5
           failureThreshold: 3
+
 ---
 apiVersion: v1
 kind: Service
@@ -80,7 +91,7 @@ spec:
               secretKeyRef:
                 name: nuttersecret
                 key: nuttersecret
-          - name: OPENAI_API_KEY
+          - name: OPENAI_TOKEN
             valueFrom:
               secretKeyRef:
                 name: nuttersecret
