--- a/prod/monitoring/values.yml
+++ b/prod/monitoring/values.yml
@@ -13,7 +13,7 @@ defaultRules:
     kubeApiserverHistogram: true
     kubeApiserverSlos: true
     kubelet: true
-    kubeProxy: true
+    kubeProxy: false
     kubePrometheusGeneral: true
     kubePrometheusNodeRecording: true
     kubernetesApps: true
@@ -34,6 +34,44 @@ alertmanager:
   enabled: true
   ingress:
     enabled: false
+  requests:
+    memory: 128Mi
+  config:
+    global:
+      resolve_timeout: 5m
+    route:
+      group_by: ['alertname']
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 12h
+      # Default alerter
+      receiver: 'null'
+      routes:
+      # Muted alerts
+      - receiver: 'null'
+        matchers: 
+        - alertname =~ "Watchdog|InfoInhibitor"
+      - receiver: 'discord'
+    receivers:
+    - name: "null"
+    - name: "discord"
+      slack_configs:
+      - channel: "alerts"
+        username: "Prometheus"
+        api_url: 'https://discord.com/api/webhooks/1126586821355261952/D1FN5Tngwm5PrkiqkQbuHqzLhF5O1divylXb8pZ1Anoorf1NtTJekFHOVaPZlths4iYd/slack'
+        send_resolved: true
+        title: |-
+          {{ index .CommonLabels "alertname" }}
+        text: |-
+          {{ if eq .Status "firing" }}
+            :fire: *Alert:* {{ index .CommonLabels "issue" }} is {{ .Status }} 
+            *Description:* {{ index .CommonAnnotations "description" }}
+          {{ else }}
+            :white_check_mark: *Alert:* {{ index .CommonLabels "issue" }} is {{ .Status }}
+            *Description:* {{ index .CommonAnnotations "description" }}
+          {{ end }}
+    templates:
+    - '/etc/alertmanager/config/*.tmpl'
 
 grafana:
   enabled: true
@@ -41,32 +79,31 @@ grafana:
   forceDeployDatasources: false
   forceDeployDashboards: false
   defaultDashboardsEnabled: true
-  defaultDashboardsTimezone: utc
+  defaultDashboardsTimezone: Europe/Prague
   serviceMonitor:
     enabled: true
-  admin:
-    existingSecret: grafana-admin-credentials
-    userKey: admin-user
-    passwordKey: admin-password
+  sidecar:
+    dashboards:
+      enabled: true
+      provider:
+        allowUiUpdates: true
 
 kubeApiServer:
   enabled: true
 
+kubeproxy:
+  enabled: false
+
 kubelet:
   enabled: true
   serviceMonitor:
+    https: true
     metricRelabelings:
       - action: replace
         sourceLabels:
           - node
         targetLabel: instance
 
-kubeControllerManager:
-  enabled: true
-  endpoints: # ips of servers 
-    - 192.168.30.38
-    - 192.168.30.39
-    - 192.168.30.40
 
 coreDns:
   enabled: true
@@ -74,30 +111,6 @@ coreDns:
 kubeDns:
   enabled: false
 
-kubeEtcd:
-  enabled: true
-  endpoints: # ips of servers
-    - 192.168.30.38
-    - 192.168.30.39
-    - 192.168.30.40
-  service:
-    enabled: true
-    port: 2381
-    targetPort: 2381
-
-kubeScheduler:
-  enabled: true
-  endpoints: # ips of servers
-    - 192.168.30.38
-    - 192.168.30.39
-    - 192.168.30.40
-
-kubeProxy:
-  enabled: true
-  endpoints: # ips of servers
-    - 192.168.30.38
-    - 192.168.30.39
-    - 192.168.30.40
 
 kubeStateMetrics:
   enabled: true
@@ -149,33 +162,59 @@ prometheus-node-exporter:
           targetLabel: kubernetes_node
   resources:
     requests:
-      memory: 512Mi
-      cpu: 250m
+      memory: 128Mi
+      cpu: 50m
     limits:
-      memory: 2048Mi
-
+      memory: 1Gi
+        
 prometheusOperator:
   enabled: true
-  prometheusConfigReloader:
-    resources:
-      requests:
-        cpu: 200m
-        memory: 50Mi
-      limits:
-        memory: 100Mi
 
 prometheus:
   enabled: true
   prometheusSpec:
+    resources:
+      requests:
+        memory: 1Gi
+        cpu: 200m
+      limits:
+        memory: 4Gi
     replicas: 1
     replicaExternalLabelName: "replica"
     ruleSelectorNilUsesHelmValues: false
     serviceMonitorSelectorNilUsesHelmValues: false
     podMonitorSelectorNilUsesHelmValues: false
     probeSelectorNilUsesHelmValues: false
-    retention: 6h
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+              - node3
+              - node4
+        preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 1
+          preference:
+            matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+              - node2
+    retention: 720h
     enableAdminAPI: true
     walCompression: true
+    storageSpec:
+      volumeClaimTemplate:
+        spec:
+          storageClass: longhorn
+          accessModes: ["ReadWriteOnce"]
+          resources:
+            requests:
+              storage: 100Gi
+
 
 thanosRuler:
   enabled: false
